--- a/index.html
+++ b/index.html
@@ -1444,7 +1444,7 @@
                         Email: <i class="email"
                             style="font-family: 'Times New Roman', Times, serif; font-size: xx-large; padding-left: 10px;">
                             <a href="mailto:yennhuiyan2005@gmail.com"> yennhuiyan2005@gmail.com</a></i><br>
-                        <a href="pdf/Yenn Hui Yan Resume 2.pdf" download="Yenn Hui Yan Resume">Get my resume</a>
+                        <a href="pdf/Yenn Hui Yan Resume A.pdf" download="Yenn Hui Yan Resume">Get my resume</a>
                     </p>
                     <svg class="svg--source" width="0" height="0" aria-hidden="true">
                         <!-- GitHub logo -->
